インターフェース対応
